syntax = "proto3";

import "types.proto";

message RowBlock {
    bytes row_id = 1;
    Row row = 2;
}

message SampleBlock {
    bytes sample_id = 1;
    Sample sample = 2;
}

message RowNamespaceDataBlock {
    bytes data_id = 1;
    RowNamespaceData data = 2;
}
